recursion.cons.increasing.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  if(l==Nil){
    return true;
  }else if (t.head < l.tail.head){
    return true;
  }else return false;
}